fixed height and overflow for logs block

--- a/sources/zafira-web/angular/client/styles/layout/_body.scss
+++ b/sources/zafira-web/angular/client/styles/layout/_body.scss
@@ -1706,9 +1706,17 @@ md-input-container.md-input-focused:not([md-no-float]) .md-select-placeholder sp
     box-shadow: none !important;
   }
 
+  md-tab-content-wrapper {
+    height: 100% !important;
+  }
+
+  md-tab-content {
+    height: 100% !important;
+    overflow: hidden !important;
+  }
+
   md-tabs:not(.md-no-tab-content):not(.md-dynamic-height) {
-    min-height: none;
-    height: 86vh;
+    height: 85.5vh;
     overflow: hidden;
   }
 
@@ -1813,23 +1821,33 @@ md-input-container.md-input-focused:not([md-no-float]) .md-select-placeholder sp
   }
 }
 
-.table-responsive {
-  height: 100%;
-  overflow: auto;
+.table-history+.table-responsive {
+  overflow-y: auto !important;
 }
 
-.table-history {
-  height: 100%;
-  overflow-y: auto;
+.table-history table {
+  height: auto;
+  overflow: auto;
+
+  tbody {
+    display: block;
+    overflow-y: auto;
+    height: 75.8vh;
+    width: 100% !important;
+  }
 
   tr {
+    display: table;
+    width: 100%;
+    table-layout: fixed;
     min-height: 32px;
     text-align: left !important;
 
-    td {
+    td, th {
       padding: 4px 15px !important;
       vertical-align: middle !important;
       font-size: 12px;
+      word-wrap: break-word;
 
       &:nth-child(1),
       &:nth-child(2) {
